# libipld

./: Cargo.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/serde/: de.rs  mod.rs  ser.rs
core/tests/: serde_deserializer.rs
dag-cbor/: Cargo.toml
dag-cbor-derive/: Cargo.toml
dag-cbor-derive/examples/renamed-package/: Cargo.toml
dag-cbor-derive/src/: gen.rs
dag-json/: Cargo.toml
dag-pb/: Cargo.toml
dag-pb/src/: codec.rs  lib.rs
macro/: Cargo.toml
