[package]
name = "lurk-ipld-cbor-derive"
version = "0.3.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lurk-lang/libipld"
description = "lurk-ipld dag-cbor-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.1.0"
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = "1.0.72"
synstructure = "0.12.4"

[dev-dependencies]
lurk-ipld = { path = ".." }
trybuild = "1.0.42"
