[package]
name = "lurk-ipld-json"
version = "0.3.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lurk-lang/libipld"
description = "lurk-ipld dag-json"

[dependencies]
lurk-ipld-core = { version = "0.3.0", path = "../core" }
multihash = "0.16.0"
serde_json = { version = "1.0.64", features = ["float_roundtrip"] }
serde = { version = "1.0.126", features = ["derive"] }
