[package]
name = "lurk-ipld-pb"
version = "0.1.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lurk-lang/lurk-ipld"
description = "lurk-ipld dag-pb"

[dependencies]
lurk-ipld-core = { version = "0.1.0", path = "../core" }
prost = "0.11.0"
thiserror = "1.0.25"

[dev-dependencies]
lurk-ipld-macro = { path = "../macro" }
multihash = "0.16.0"
